v0.4 on ihan just tulilla